--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ bld/
 msbuild.log
 msbuild.err
 msbuild.wrn
+/.vs/dotnetcore/v16/TestStore/0
+/.vs/dotnetcore/DesignTimeBuild
+/.vs/CollisionLib2D/v16/TestStore/0
