--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ build:
         - "dotnet build"
     artifacts:
       paths:
-        - bin/
+        - CollisionLib2D/bin/
 
 test:
     stage: test
