--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ msbuild.wrn
 /.vs/dotnetcore/v16/TestStore/0
 /.vs/dotnetcore/DesignTimeBuild
 /.vs/CollisionLib2D/v16/TestStore/0
+/.vs/CollisionLib2D/DesignTimeBuild
