--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ image: mcr.microsoft.com/dotnet/core/sdk:latest
 stages:
     - build
     - test
+    - deploy
 
 build:
     stage: build
@@ -16,3 +17,12 @@ test:
     stage: test
     script: 
         - "dotnet test"
+        
+deploy:
+  stage: deploy
+  script:
+    - dotnet pack -c Release
+    - dotnet nuget add source "${CI_API_V4_URL}/${CI_PROJECT_ID}/packages/nuget/index.json" --name gitlab --username gitlab-ci-token --password $CI_JOB_TOKEN --store-password-in-clear-text
+    - dotnet nuget push "bin/Release/*.nupkg" --source gitlab
+  only:
+    - master
