--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,6 @@ deploy:
   stage: deploy
   script:
     - dotnet pack -c Release
-    - dotnet nuget add source "${CI_API_V4_URL}/${CI_PROJECT_ID}/packages/nuget/index.json" --name gitlab --username gitlab-ci-token --password ${CI_JOB_TOKEN} --store-password-in-clear-text
-    - dotnet nuget push "bin/Release/*.nupkg" --source gitlab
+    - dotnet nuget push "bin/Release/*.nupkg" --api-key $NugetApiKey  --source https://api.nuget.org/v3/index.json
   only:
     - master
