--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,4 +28,4 @@ jobs:
     - name: Add source
       run: dotnet nuget add source --username USERNAME --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://github.com/longhorsestudios/longhorse.collisionlib2d"
     - name: Publish
-      run: dotnet nuget push "CollisionLib2D/bin/Release/*.nupkg" --source "github"
+      run: dotnet nuget push "CollisionLib2D/bin/Release/*.nupkg" --api-key ${{ secrets.GITHUB_TOKEN }} --source "github"
