--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,7 +25,5 @@ jobs:
       run: dotnet test --no-build --verbosity normal
     - name: Package
       run: dotnet pack -c Release
-    - name: Add source
-      run: dotnet nuget add source --username KyleGalvin --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/longhorsestudios/index.json"
     - name: Publish
-      run: dotnet nuget push "CollisionLib2D/bin/Release/*.nupkg" --api-key ${{ secrets.GITHUB_TOKEN }} --source "github"
+      run: dotnet nuget push "CollisionLib2D/bin/Release/*.nupkg" --api-key ${{ secrets.GITHUB_TOKEN }} --source "https://nuget.pkg.github.com/longhorsestudios/index.json"
