--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,9 +23,11 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
-    - name: Package
-      run: dotnet pack -c Release
     - name: Add source
       run: dotnet nuget add source --username USERNAME --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/OWNER/index.json"
-    - name: Publish
+    - name: Create a new project
+      run: dotnet new console --name longhorse.collisionlib2d
+    - name: Package the project
+      run: dotnet pack -c Release
+    - name: Publish the package
       run: dotnet nuget push "CollisionLib2D/bin/Release/*.nupkg" --source "github"
