--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,11 +23,7 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
-    - name: Add source
-      run: dotnet nuget add source --username USERNAME --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/OWNER/index.json"
-    - name: Create a new project
-      run: dotnet new console --name longhorse.collisionlib2d
-    - name: Package the project
-      run: dotnet pack -c Release
-    - name: Publish the package
-      run: dotnet nuget push "CollisionLib2D/bin/Release/*.nupkg" --source "github"
+    - name: Publish
+      run: dotnet nuget push ./CollisionLib2D/bin/Release/*.nupkg -k ${GITHUB_TOKEN} -s https://nuget.pkg.github.com/longhorsestudios/index.json --skip-duplicate --no-symbols 
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
