--- a/CollisionLib2D/CollisionLib2D.csproj
+++ b/CollisionLib2D/CollisionLib2D.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <RepositoryUrl>https://github.com/longhorsestudios/longhorse.collisionlib2d</RepositoryUrl>
   </PropertyGroup>
 
 </Project>
