--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ msbuild.wrn
 /.vs/dotnetcore/DesignTimeBuild
 /.vs/CollisionLib2D/v16/TestStore/0
 /.vs/CollisionLib2D/DesignTimeBuild
+/.vs/LongHorse.CollisionLib2D
