--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ msbuild.wrn
 /.vs/CollisionLib2D/v16/TestStore/0
 /.vs/CollisionLib2D/DesignTimeBuild
 /.vs/LongHorse.CollisionLib2D
+/.vs/ProjectEvaluation
